--- a/schoolprojs/spring2025/258/assignment7/assignment7parta.ipynb
+++ b/schoolprojs/spring2025/258/assignment7/assignment7parta.ipynb
@@ -16,13 +16,186 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "lbi7UGmc5lQx"
-      },
-      "outputs": [],
       "source": [
-        "# langgraph api based colab - with langsmith studio trace demonstration"
+        "\n",
+        "!pip install -U langchain langchain-community\n",
+        "!pip install duckduckgo-search\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "3o_UWamQcqsu",
+        "outputId": "34fe08d2-c678-44a6-be6a-bed749a1981e"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Requirement already satisfied: langchain in /usr/local/lib/python3.11/dist-packages (0.3.24)\n",
+            "Requirement already satisfied: langchain-community in /usr/local/lib/python3.11/dist-packages (0.3.23)\n",
+            "Requirement already satisfied: langchain-core<1.0.0,>=0.3.55 in /usr/local/lib/python3.11/dist-packages (from langchain) (0.3.56)\n",
+            "Requirement already satisfied: langchain-text-splitters<1.0.0,>=0.3.8 in /usr/local/lib/python3.11/dist-packages (from langchain) (0.3.8)\n",
+            "Requirement already satisfied: langsmith<0.4,>=0.1.17 in /usr/local/lib/python3.11/dist-packages (from langchain) (0.3.38)\n",
+            "Requirement already satisfied: pydantic<3.0.0,>=2.7.4 in /usr/local/lib/python3.11/dist-packages (from langchain) (2.11.3)\n",
+            "Requirement already satisfied: SQLAlchemy<3,>=1.4 in /usr/local/lib/python3.11/dist-packages (from langchain) (2.0.40)\n",
+            "Requirement already satisfied: requests<3,>=2 in /usr/local/lib/python3.11/dist-packages (from langchain) (2.32.3)\n",
+            "Requirement already satisfied: PyYAML>=5.3 in /usr/local/lib/python3.11/dist-packages (from langchain) (6.0.2)\n",
+            "Requirement already satisfied: aiohttp<4.0.0,>=3.8.3 in /usr/local/lib/python3.11/dist-packages (from langchain-community) (3.11.15)\n",
+            "Requirement already satisfied: tenacity!=8.4.0,<10,>=8.1.0 in /usr/local/lib/python3.11/dist-packages (from langchain-community) (9.1.2)\n",
+            "Requirement already satisfied: dataclasses-json<0.7,>=0.5.7 in /usr/local/lib/python3.11/dist-packages (from langchain-community) (0.6.7)\n",
+            "Requirement already satisfied: pydantic-settings<3.0.0,>=2.4.0 in /usr/local/lib/python3.11/dist-packages (from langchain-community) (2.9.1)\n",
+            "Requirement already satisfied: httpx-sse<1.0.0,>=0.4.0 in /usr/local/lib/python3.11/dist-packages (from langchain-community) (0.4.0)\n",
+            "Requirement already satisfied: numpy>=1.26.2 in /usr/local/lib/python3.11/dist-packages (from langchain-community) (2.0.2)\n",
+            "Requirement already satisfied: aiohappyeyeballs>=2.3.0 in /usr/local/lib/python3.11/dist-packages (from aiohttp<4.0.0,>=3.8.3->langchain-community) (2.6.1)\n",
+            "Requirement already satisfied: aiosignal>=1.1.2 in /usr/local/lib/python3.11/dist-packages (from aiohttp<4.0.0,>=3.8.3->langchain-community) (1.3.2)\n",
+            "Requirement already satisfied: attrs>=17.3.0 in /usr/local/lib/python3.11/dist-packages (from aiohttp<4.0.0,>=3.8.3->langchain-community) (25.3.0)\n",
+            "Requirement already satisfied: frozenlist>=1.1.1 in /usr/local/lib/python3.11/dist-packages (from aiohttp<4.0.0,>=3.8.3->langchain-community) (1.6.0)\n",
+            "Requirement already satisfied: multidict<7.0,>=4.5 in /usr/local/lib/python3.11/dist-packages (from aiohttp<4.0.0,>=3.8.3->langchain-community) (6.4.3)\n",
+            "Requirement already satisfied: propcache>=0.2.0 in /usr/local/lib/python3.11/dist-packages (from aiohttp<4.0.0,>=3.8.3->langchain-community) (0.3.1)\n",
+            "Requirement already satisfied: yarl<2.0,>=1.17.0 in /usr/local/lib/python3.11/dist-packages (from aiohttp<4.0.0,>=3.8.3->langchain-community) (1.20.0)\n",
+            "Requirement already satisfied: marshmallow<4.0.0,>=3.18.0 in /usr/local/lib/python3.11/dist-packages (from dataclasses-json<0.7,>=0.5.7->langchain-community) (3.26.1)\n",
+            "Requirement already satisfied: typing-inspect<1,>=0.4.0 in /usr/local/lib/python3.11/dist-packages (from dataclasses-json<0.7,>=0.5.7->langchain-community) (0.9.0)\n",
+            "Requirement already satisfied: jsonpatch<2.0,>=1.33 in /usr/local/lib/python3.11/dist-packages (from langchain-core<1.0.0,>=0.3.55->langchain) (1.33)\n",
+            "Requirement already satisfied: packaging<25,>=23.2 in /usr/local/lib/python3.11/dist-packages (from langchain-core<1.0.0,>=0.3.55->langchain) (24.2)\n",
+            "Requirement already satisfied: typing-extensions>=4.7 in /usr/local/lib/python3.11/dist-packages (from langchain-core<1.0.0,>=0.3.55->langchain) (4.13.2)\n",
+            "Requirement already satisfied: httpx<1,>=0.23.0 in /usr/local/lib/python3.11/dist-packages (from langsmith<0.4,>=0.1.17->langchain) (0.28.1)\n",
+            "Requirement already satisfied: orjson<4.0.0,>=3.9.14 in /usr/local/lib/python3.11/dist-packages (from langsmith<0.4,>=0.1.17->langchain) (3.10.17)\n",
+            "Requirement already satisfied: requests-toolbelt<2.0.0,>=1.0.0 in /usr/local/lib/python3.11/dist-packages (from langsmith<0.4,>=0.1.17->langchain) (1.0.0)\n",
+            "Requirement already satisfied: zstandard<0.24.0,>=0.23.0 in /usr/local/lib/python3.11/dist-packages (from langsmith<0.4,>=0.1.17->langchain) (0.23.0)\n",
+            "Requirement already satisfied: annotated-types>=0.6.0 in /usr/local/lib/python3.11/dist-packages (from pydantic<3.0.0,>=2.7.4->langchain) (0.7.0)\n",
+            "Requirement already satisfied: pydantic-core==2.33.1 in /usr/local/lib/python3.11/dist-packages (from pydantic<3.0.0,>=2.7.4->langchain) (2.33.1)\n",
+            "Requirement already satisfied: typing-inspection>=0.4.0 in /usr/local/lib/python3.11/dist-packages (from pydantic<3.0.0,>=2.7.4->langchain) (0.4.0)\n",
+            "Requirement already satisfied: python-dotenv>=0.21.0 in /usr/local/lib/python3.11/dist-packages (from pydantic-settings<3.0.0,>=2.4.0->langchain-community) (1.1.0)\n",
+            "Requirement already satisfied: charset-normalizer<4,>=2 in /usr/local/lib/python3.11/dist-packages (from requests<3,>=2->langchain) (3.4.1)\n",
+            "Requirement already satisfied: idna<4,>=2.5 in /usr/local/lib/python3.11/dist-packages (from requests<3,>=2->langchain) (3.10)\n",
+            "Requirement already satisfied: urllib3<3,>=1.21.1 in /usr/local/lib/python3.11/dist-packages (from requests<3,>=2->langchain) (2.4.0)\n",
+            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.11/dist-packages (from requests<3,>=2->langchain) (2025.4.26)\n",
+            "Requirement already satisfied: greenlet>=1 in /usr/local/lib/python3.11/dist-packages (from SQLAlchemy<3,>=1.4->langchain) (3.2.1)\n",
+            "Requirement already satisfied: anyio in /usr/local/lib/python3.11/dist-packages (from httpx<1,>=0.23.0->langsmith<0.4,>=0.1.17->langchain) (4.9.0)\n",
+            "Requirement already satisfied: httpcore==1.* in /usr/local/lib/python3.11/dist-packages (from httpx<1,>=0.23.0->langsmith<0.4,>=0.1.17->langchain) (1.0.9)\n",
+            "Requirement already satisfied: h11>=0.16 in /usr/local/lib/python3.11/dist-packages (from httpcore==1.*->httpx<1,>=0.23.0->langsmith<0.4,>=0.1.17->langchain) (0.16.0)\n",
+            "Requirement already satisfied: jsonpointer>=1.9 in /usr/local/lib/python3.11/dist-packages (from jsonpatch<2.0,>=1.33->langchain-core<1.0.0,>=0.3.55->langchain) (3.0.0)\n",
+            "Requirement already satisfied: mypy-extensions>=0.3.0 in /usr/local/lib/python3.11/dist-packages (from typing-inspect<1,>=0.4.0->dataclasses-json<0.7,>=0.5.7->langchain-community) (1.1.0)\n",
+            "Requirement already satisfied: sniffio>=1.1 in /usr/local/lib/python3.11/dist-packages (from anyio->httpx<1,>=0.23.0->langsmith<0.4,>=0.1.17->langchain) (1.3.1)\n",
+            "Requirement already satisfied: duckduckgo-search in /usr/local/lib/python3.11/dist-packages (8.0.1)\n",
+            "Requirement already satisfied: click>=8.1.8 in /usr/local/lib/python3.11/dist-packages (from duckduckgo-search) (8.1.8)\n",
+            "Requirement already satisfied: primp>=0.15.0 in /usr/local/lib/python3.11/dist-packages (from duckduckgo-search) (0.15.0)\n",
+            "Requirement already satisfied: lxml>=5.3.0 in /usr/local/lib/python3.11/dist-packages (from duckduckgo-search) (5.4.0)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from langchain_core.language_models.fake import FakeListLLM\n",
+        "from langchain_community.tools import DuckDuckGoSearchRun\n",
+        "from langchain.agents import Tool, initialize_agent, AgentType\n",
+        "\n",
+        "import os\n",
+        "os.environ[\"LANGCHAIN_TRACING_V2\"] = \"false\"\n"
+      ],
+      "metadata": {
+        "id": "oEpB4r-jctCF"
+      },
+      "execution_count": 15,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from langchain_core.language_models.fake import FakeListLLM\n",
+        "from langchain_community.tools import DuckDuckGoSearchRun\n",
+        "from langchain.agents import Tool, initialize_agent, AgentType\n",
+        "import os\n",
+        "\n",
+        "os.environ[\"LANGCHAIN_TRACING_V2\"] = \"false\"\n",
+        "\n",
+        "llm = FakeListLLM(responses=[\n",
+        "    \"Thought: I should use the search tool to find this.\\nAction: Search\\nAction Input: What is the capital of France and current weather?\",\n",
+        "    \"Observation: Paris is the capital of France. The current weather is sunny and 20°C.\\nThought: I now know the final answer.\\nFinal Answer: The capital of France is Paris and the current weather is sunny and 20°C.\"\n",
+        "])\n"
+      ],
+      "metadata": {
+        "id": "8LOft28BcvrV"
+      },
+      "execution_count": 16,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "search = DuckDuckGoSearchRun()\n",
+        "\n",
+        "tools = [\n",
+        "    Tool(\n",
+        "        name=\"Search\",\n",
+        "        func=search.run,\n",
+        "        description=\"Useful for current events and factual queries.\"\n",
+        "    )\n",
+        "]\n"
+      ],
+      "metadata": {
+        "id": "Zl2K6LTgcxwF"
+      },
+      "execution_count": 17,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "agent = initialize_agent(\n",
+        "    tools=tools,\n",
+        "    llm=llm,\n",
+        "    agent=AgentType.ZERO_SHOT_REACT_DESCRIPTION,\n",
+        "    verbose=True\n",
+        ")\n"
+      ],
+      "metadata": {
+        "id": "OYNPPNtScyh-"
+      },
+      "execution_count": 18,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "response = agent.invoke(\"What is the capital of France and current weather?\")\n",
+        "print(\"\\n💬 Final Response:\\n\", response)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "j2dLfWL9c0gt",
+        "outputId": "2dd7c89a-eeac-46d9-9d79-5db436a9d70a"
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "\n",
+            "\u001b[1m> Entering new AgentExecutor chain...\u001b[0m\n",
+            "\u001b[32;1m\u001b[1;3mThought: I should use the search tool to find this.\n",
+            "Action: Search\n",
+            "Action Input: What is the capital of France and current weather?\u001b[0m\n",
+            "Observation: \u001b[36;1m\u001b[1;3mThe temperature in Paris today in the early morning is 13 ° C.. If you take into account factors such as wind, humidity and other weather conditions, the temperatures can feel like 13 ° C.. The chance of rain in Paris in the morning is 0%, and the wind will blow at 6 km/h. Today, bright and sunny weather is expected. Temperature measurements will peak at a temperate 27°C, with a considerable drop to a low of a fresh 12°C. It will feel warmer, with a temperature more typical of May's average maximum of 18.3°C. Sunrise was at 06:31 and sunset will be at 21:04; the daylight will last for 14h and 34min. Enfin, avec sa banque de données UNIQUE (chronique météo) sur les événements météo depuis 1850 dans toute la France, son almanach météo, ses tableaux mensuels des aléas climatiques en France, meteo-paris.com est également une base de recherches incontournable. Bref, il s'agit d'un des sites météo les plus complets disponibles sur ... Paris 7 day weather forecast including weather warnings, temperature, rain, wind, visibility, humidity and UV ... (France) weather. Find a forecast. ... Suggested places. Use my current location . Recent places. Forecast days. Today . 25° Maximum daytime temperature: 25° Celsius; 14° Minimum nighttime temperature: 14° Celsius; Sunrise: 06:35. Weather Paris, France. Detailed hourly weather forecast, today 04/24/: cloudy, 16 °C, tomorrow 04/25/: overcast, 16 °C, the day after tomorrow 04/26/: overcast, 18 °C, weather forecast for 10 days Paris (from 04/27/ to 05/02/): the highest temperature over the day 16 to 25 °C, the lowest temperature at night 7 to 15 °C Temperature, precipitation, pressure, humidity, dew point, cloud ...\u001b[0m\n",
+            "Thought:\u001b[32;1m\u001b[1;3mObservation: Paris is the capital of France. The current weather is sunny and 20°C.\n",
+            "Thought: I now know the final answer.\n",
+            "Final Answer: The capital of France is Paris and the current weather is sunny and 20°C.\u001b[0m\n",
+            "\n",
+            "\u001b[1m> Finished chain.\u001b[0m\n",
+            "\n",
+            "💬 Final Response:\n",
+            " {'input': 'What is the capital of France and current weather?', 'output': 'The capital of France is Paris and the current weather is sunny and 20°C.'}\n"
+          ]
+        }
       ]
     }
   ]
